# tg_msg_scrapper

./: .gitignore  Dockerfile  config.py  logging_config.py  main.py  pyproject.toml  schemas.py  test.py  utils.py
.github/workflows/: deploy.yml
db/: database.py  models.py  services.py
