[tool.poetry]
name = "tg-msg-scrapper"
version = "0.1.0"
description = ""
authors = ["ybelmach <yaroslav.belmach.wk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
lxml = "^5.3.0"
openai = "^1.52.2"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
